# espanso

./: .clang-format.json  .clang-format.schema.json  .clang-tidy  .clang-tidy.json  .clang-tidy.schema.json  .dockerignore  .gitignore  .travis.yml  CNAME  CONTRIBUTING.md  Cargo.toml  Compilation.md  Gemfile  LICENSE  Makefile.toml  README.md  SECURITY.md  _config.yml  azure-pipelines.yml  build.rs  docs.html  format.json  index.html  install.html  justfile  packager.py  snapcraft.yaml  sponsors.html
_data/: docs.yml  (+2 more)
espanso/: Cargo.toml
espanso-clipboard/: Cargo.toml  build.rs
espanso-clipboard/src/: lib.rs
espanso-clipboard/src/cocoa/: ffi.rs  mod.rs  native.h  native.mm
espanso-clipboard/src/wayland/: mod.rs
espanso-clipboard/src/wayland/fallback/: mod.rs
espanso-clipboard/src/win32/: ffi.rs  mod.rs  native.cpp  native.h
espanso-clipboard/src/x11/: mod.rs
espanso-clipboard/src/x11/native/: ffi.rs  mod.rs  native.cpp
espanso-clipboard/src/x11/xclip/: mod.rs
espanso-config/: Cargo.toml
espanso-config/src/: counter.rs  error.rs  lib.rs  util.rs
espanso-config/src/config/: default.rs  macro_util.rs  mod.rs  path.rs  resolve.rs  store.rs  util.rs  yaml.rs
espanso-config/src/config/parse/: mod.rs  yaml.rs
espanso-config/src/legacy/: config.rs  mod.rs  model.rs
espanso-config/src/matches/: mod.rs  yaml.rs
espanso-config/src/matches/group/: mod.rs  path.rs  yaml.rs
espanso-config/src/matches/store/: default.rs  mod.rs
espanso-detect/: Cargo.toml  build.rs
espanso-detect/src/: event.rs  lib.rs
espanso-detect/src/evdev/: README.md  context.rs  device.rs  ffi.rs  hotkey.rs  keymap.rs  mod.rs  native.cpp  native.h  state.rs
espanso-detect/src/evdev/sync/: mod.rs  wayland.rs
espanso-detect/src/hotkey/: keys.rs  mod.rs
espanso-detect/src/layout/: gnome.rs  mod.rs  wayland.rs  x11.rs
espanso-detect/src/mac/: mod.rs  native.h  native.mm
espanso-detect/src/win32/: mod.rs  native.cpp  native.h
espanso-detect/src/x11/: mod.rs  native.cpp  native.h
espanso-engine/: Cargo.toml
espanso-engine/src/: lib.rs
espanso-engine/src/dispatch/: default.rs  mod.rs
espanso-engine/src/dispatch/executor/: context_menu.rs  html_inject.rs  icon_update.rs  image_inject.rs  key_inject.rs  mod.rs  secure_input.rs  text_inject.rs  text_ui.rs
espanso-engine/src/event/: effect.rs  external.rs  input.rs  internal.rs  mod.rs  ui.rs
espanso-engine/src/funnel/: default.rs  mod.rs
espanso-engine/src/process/: default.rs  mod.rs
espanso-engine/src/process/middleware/: action.rs  alt_code_synthesizer.rs  cause.rs  context_menu.rs  cursor_hint.rs  delay_modifiers.rs  disable.rs  discard.rs  exit.rs  hotkey.rs  icon_status.rs  image_resolve.rs  markdown.rs  match_exec.rs  match_select.rs  matcher.rs  mod.rs  multiplex.rs  notification.rs  open_config.rs  past_discard.rs  render.rs  search.rs  suppress.rs  undo.rs
espanso-info/: Cargo.toml  build.rs
espanso-info/src/: lib.rs
espanso-info/src/cocoa/: ffi.rs  mod.rs  native.mm
espanso-info/src/wayland/: mod.rs  native.cpp
espanso-info/src/win32/: ffi.rs  mod.rs
espanso-info/src/x11/: ffi.rs  mod.rs  native.cpp
espanso-inject/: Cargo.toml  build.rs
espanso-inject/src/: keys.rs  lib.rs
espanso-inject/src/evdev/: README.md  context.rs  ffi.rs  keymap.rs  mod.rs  native.c  state.rs  uinput.rs
espanso-inject/src/linux/: mod.rs  raw_keys.rs
espanso-inject/src/mac/: mod.rs  native.h  native.mm  raw_keys.rs
espanso-inject/src/win32/: mod.rs  native.cpp  raw_keys.rs
espanso-inject/src/x11/: README.md  ffi.rs  mod.rs  raw_keys.rs
espanso-inject/src/x11/default/: mod.rs
espanso-inject/src/x11/xdotool/: ffi.rs  mod.rs
espanso-ipc/: Cargo.toml
espanso-ipc/src/: lib.rs  unix.rs  util.rs  windows.rs
espanso-kvs/: Cargo.toml
espanso-kvs/src/: lib.rs  persistent.rs
espanso-mac-utils/: Cargo.toml  build.rs
espanso-mac-utils/src/: ffi.rs  lib.rs  native.h  native.mm
espanso-migrate/: Cargo.toml
espanso-migrate/src/: convert.rs  lib.rs  load.rs  render.rs
espanso-migrate/test/all_params/legacy/: default.yml
espanso-migrate/test/base/legacy/: default.yml
espanso-migrate/test/simple/legacy/: default.yml
espanso-modulo/: Cargo.toml  build.rs
espanso-modulo/src/: lib.rs  troubleshooting.rs
espanso-modulo/src/form/: config.rs  generator.rs  mod.rs
espanso-modulo/src/search/: algorithm.rs  config.rs  generator.rs  mod.rs
espanso-modulo/src/sys/: mod.rs  util.rs
espanso-modulo/src/textview/: mod.rs
espanso-modulo/src/welcome/: mod.rs
espanso-modulo/src/wizard/: mod.rs
espanso-package/: Cargo.toml
espanso-package/src/: lib.rs  logging.rs  manifest.rs  package.rs  resolver.rs
espanso-package/src/archive/: default.rs  mod.rs  read.rs  util.rs
espanso-package/src/package/: default.rs  mod.rs
espanso-package/src/provider/: git.rs  github.rs  gitlab.rs  hub.rs  mod.rs
espanso-package/src/resolver/: git.rs  mod.rs
espanso-package/src/util/: download.rs  git.rs  github.rs  gitlab.rs  mod.rs
espanso-render/: Cargo.toml
espanso-render/src/: lib.rs
espanso-render/src/extension/: choice.rs  clipboard.rs  date.rs  echo.rs  exec_util.rs  form.rs  mod.rs  random.rs  script.rs  shell.rs  util.rs
espanso-render/src/renderer/: mod.rs  resolve.rs  util.rs
espanso-ui/: Cargo.toml  build.rs
espanso-ui/src/: event.rs  icons.rs  lib.rs  menu.rs
espanso-ui/src/linux/: mod.rs
espanso-ui/src/mac/: AppDelegate.h  AppDelegate.mm  mod.rs  native.h  native.mm
espanso-ui/src/win32/: mod.rs  native.cpp  native.h  notification.rs
espanso/src/: common_flags.rs  config.rs  exit_code.rs  icon.rs  ipc.rs  lock.rs  main.rs  main_old2.rs  util.rs
espanso/src/capabilities/: fallback.rs  linux.rs  mod.rs
espanso/src/cli/: cmd.rs  edit.rs  env_path.rs  log.rs  migrate.rs  mod.rs  path.rs  util.rs
espanso/src/engine/: mod.rs
espanso/src/gui/: mod.rs
espanso/src/logging/: mod.rs
espanso/src/patch/: config_store.rs  mod.rs
espanso/src/path/: linux.rs  macos.rs  mod.rs  win.rs
espanso/src/preferences/: default.rs  mod.rs
espanso/tests/: cli_tests.rs  expected_result.md
(+715 files in other folders)
