[workspace]
resolver = "2"

members = [
  "espanso",
  "espanso-detect",
  "espanso-ui",
  "espanso-inject",
  "espanso-ipc",
  "espanso-config",
  "espanso-match",
  "espanso-clipboard",
  "espanso-render",
  "espanso-info",
  "espanso-path",
  "espanso-modulo",
  "espanso-migrate",
  "espanso-mac-utils",
  "espanso-kvs",
  "espanso-engine",
  "espanso-package",
]
