[package]
name = "espanso-config"
version = "0.1.0"
authors = ["Federico Terzi <federico-terzi@users.noreply.github.com>"]
edition = "2021"

[dependencies]
log.workspace = true
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_yaml.workspace = true
glob.workspace = true
regex.workspace = true
lazy_static.workspace = true
dunce = "1.0.1"
walkdir = "2.3.1"
enum-as-inner = "0.6.0"
ordered-float = "2.0"
indoc = "1.0.3"

[dev-dependencies]
tempdir.workspace = true
tempfile = "3.2.0"
mockall = "0.9.1"

[lints]
workspace = true
