[package]
name = "espanso-engine"
version = "0.1.0"
authors = ["Federico Terzi <federico-terzi@users.noreply.github.com>"]
edition = "2018"

[dependencies]
log = "0.4.14"
anyhow = "1.0.38"
thiserror = "1.0.23"
crossbeam = "0.8.0"
markdown = "0.3.0"
html2text = "0.6.0"


[dev-dependencies]
tempdir = "0.3.7"
