[package]
name = "espanso-engine"
version = "0.1.0"
authors = ["Federico Terzi <federico-terzi@users.noreply.github.com>"]
edition = "2021"

[dependencies]
log.workspace = true
anyhow.workspace = true
thiserror.workspace = true
crossbeam.workspace = true
markdown = "0.3.0"
html2text = "0.12.0"

[lints]
workspace = true
