[package]
name = "espanso-info"
version = "0.1.0"
authors = ["Federico Terzi <federico-terzi@users.noreply.github.com>"]
edition = "2021"
build = "build.rs"

[features]
# If the wayland feature is enabled, all X11 dependencies will be dropped
wayland = []

[dependencies]
log = "0.4.14"
anyhow = "1.0.38"

[lints]
workspace = true

[target.'cfg(windows)'.dependencies]
widestring = "0.4.3"

[build-dependencies]
cc = "1.0.73"
