[package]
name = "espanso-inject"
version = "0.1.0"
authors = ["Federico Terzi <federico-terzi@users.noreply.github.com>"]
edition = "2021"
build = "build.rs"

[features]
# If the wayland feature is enabled, all X11 dependencies will be dropped
# and only EVDEV-based methods will be supported.
wayland = []

[dependencies]
log = "0.4.14"
anyhow = "1.0.38"
thiserror = "1.0.23"
lazy_static = "1.4.0"
regex = "1.5.5"

[dev-dependencies]
enum-as-inner = "0.6.0"

[lints]
workspace = true

[target.'cfg(windows)'.dependencies]
widestring = "0.4.3"

[target.'cfg(target_os="linux")'.dependencies]
libc = "0.2.85"
scopeguard = "1.1.0"
itertools = "0.10.0"

[build-dependencies]
cc = "1.0.73"
