[package]
name = "espanso-kvs"
version = "0.1.0"
authors = ["Federico Terzi <federico-terzi@users.noreply.github.com>"]
edition = "2021"

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json = "1.0.62"

[dev-dependencies]
tempdir.workspace = true

[lints]
workspace = true
