[package]
name = "espanso-migrate"
version = "0.1.0"
authors = ["Federico Terzi <federico-terzi@users.noreply.github.com>"]
edition = "2018"

[dependencies]
log = "0.4.14"
anyhow = "1.0.38"
thiserror = "1.0.23"
glob = "0.3.0"
regex = "1.4.3"
lazy_static = "1.4.0"
dunce = "1.0.1"
walkdir = "2.3.1"

[dev-dependencies]
tempdir = "0.3.7"
tempfile = "3.2.0"
include_dir = "0.6.0"
test-case = "1.1.0"