[package]
name = "espanso-migrate"
version = "0.1.0"
authors = ["Federico Terzi <federico-terzi@users.noreply.github.com>"]
edition = "2021"

[dependencies]
anyhow = "1.0.38"
thiserror = "1.0.23"
glob = "0.3.0"
regex = "1.5.5"
lazy_static = "1.4.0"
walkdir = "2.3.1"
yaml-rust = { version = "0.4.6", git = "https://github.com/federico-terzi/yaml-rust" }
path-slash = "0.1.4"
tempdir = "0.3.7"
fs_extra = "1.3.0"

[dev-dependencies]
include_dir = { version = "0.6.0", features = ["search"] }
test-case = "1.1.0"
pretty_assertions = "0.7.2"

[lints]
workspace = true
