[package]
name = "espanso-migrate"
version = "0.1.0"
authors = ["Federico Terzi <federico-terzi@users.noreply.github.com>"]
edition = "2021"

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
glob.workspace = true
regex.workspace = true
lazy_static.workspace = true
walkdir.workspace = true
yaml-rust = { version = "0.4.6", git = "https://github.com/federico-terzi/yaml-rust" }
path-slash = "0.1.4"
tempdir.workspace = true
fs_extra.workspace = true

[dev-dependencies]
include_dir = { version = "0.6.0", features = ["search"] }
test-case = "1.1.0"
pretty_assertions = "0.7.2"

[lints]
workspace = true
