[package]
name = "espanso-package"
version = "0.1.0"
authors = ["Federico Terzi <federico-terzi@users.noreply.github.com>"]
edition = "2021"

[dependencies]
log.workspace = true
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
tempdir.workspace = true
glob.workspace = true
natord = "1.0.9"
lazy_static.workspace = true
regex.workspace = true
zip = "0.5.13"
scopeguard = "1.1.0"
fs_extra.workspace = true
sha2 = "0.9.6"
hex = "0.4.3"
reqwest = { version = "0.11.16", features = [
    "blocking",
], default-features = false }

# On Linux we don't want to depend on openssl to avoid dependency issues
# https://github.com/espanso/espanso/issues/1056
# We need to use features to control this behavior instead of targets due to this Cargo bug:
# https://github.com/rust-lang/cargo/issues/1197
[features]
default-tls = ["reqwest/default-tls"]
rustls-tls = ["reqwest/rustls-tls"]

[lints]
workspace = true
