[package]
name = "espanso-render"
version = "0.1.0"
authors = ["Federico Terzi <federico-terzi@users.noreply.github.com>"]
edition = "2021"

[dependencies]
log = "0.4.14"
anyhow = "1.0.38"
thiserror = "1.0.23"
regex = "1.5.5"
lazy_static = "1.4.0"
chrono = { version = "0.4.19", features = ["unstable-locales"] }
enum-as-inner = "0.6.0"
rand = "0.8.3"
sys-locale = "0.1.0"

[lints]
workspace = true
