[package]
name = "espanso-ui"
version = "0.1.0"
authors = ["Federico Terzi <federico-terzi@users.noreply.github.com>"]
edition = "2018"
build="build.rs"

[dependencies]
log = "0.4.14"
serde_json = "1.0.61"
serde = { version = "1.0.123", features = ["derive"] }
anyhow = "1.0.38"
thiserror = "1.0.23"

[target.'cfg(windows)'.dependencies]
widestring = "0.4.3"
lazycell = "1.3.0"

[target.'cfg(target_os="macos")'.dependencies]
lazycell = "1.3.0"

[target.'cfg(target_os="linux")'.dependencies]
notify-rust = "4.2.2"

[build-dependencies]
cc = "1.0.66"