[package]
name = "espanso"
version = "1.0.0"
authors = ["Federico Terzi <federicoterzi96@gmail.com>"]
license = "GPL-3.0"
description = "Cross-platform Text Expander written in Rust"
readme = "README.md"
homepage = "https://github.com/federico-terzi/espanso"
edition = "2018"

[features]
# If the wayland feature is enabled, all X11 dependencies will be dropped
# and only methods suitable for Wayland will be used
wayland = ["espanso-detect/wayland", "espanso-inject/wayland", "espanso-clipboard/wayland"]

[dependencies]
espanso-detect = { path = "../espanso-detect" } 
espanso-ui = { path = "../espanso-ui" } 
espanso-inject = { path = "../espanso-inject" } 
espanso-config = { path = "../espanso-config" } 
espanso-match = { path = "../espanso-match" } 
espanso-clipboard = { path = "../espanso-clipboard" } 
maplit = "1.0.2"
simplelog = "0.9.0"