[package]
name = "espanso"
version = "1.0.0"
authors = ["Federico Terzi <federicoterzi96@gmail.com>"]
license = "GPL-3.0"
description = "Cross-platform Text Expander written in Rust"
readme = "README.md"
homepage = "https://github.com/federico-terzi/espanso"
edition = "2018"

[features]
# If the wayland feature is enabled, all X11 dependencies will be dropped
# and only methods suitable for Wayland will be used
wayland = ["espanso-detect/wayland", "espanso-inject/wayland", "espanso-clipboard/wayland", "espanso-info/wayland"]

[dependencies]
espanso-detect = { path = "../espanso-detect" } 
espanso-ui = { path = "../espanso-ui" } 
espanso-inject = { path = "../espanso-inject" } 
espanso-config = { path = "../espanso-config" } 
espanso-match = { path = "../espanso-match" } 
espanso-clipboard = { path = "../espanso-clipboard" } 
espanso-info = { path = "../espanso-info" } 
espanso-render = { path = "../espanso-render" } 
espanso-path = { path = "../espanso-path" } 
maplit = "1.0.2"
simplelog = "0.9.0"
log = "0.4.14"
anyhow = "1.0.38"
thiserror = "1.0.23"
clap = "2.33.3"
lazy_static = "1.4.0"
crossbeam = "0.8.0"
enum-as-inner = "0.3.3"
dirs = "3.0.1"
serde = { version = "1.0.123", features = ["derive"] }
serde_json = "1.0.62"
markdown = "0.3.0"
html2text = "0.2.1"
log-panics = "2.0.0"